# infer-schema

./: .pre-commit-config.yaml  LICENSE  README.md  infer-schema.1  infer-schema.1.scd  infer_schema.py  make_test_cases.sh  pyproject.toml  test_infer_schema.py
.github/workflows/: tests.yml
tests/: date-times.csv  date-times.schema.json  dates.csv  dates.schema.json  mtcars.csv  mtcars.schema.json  mtcars_partial.csv  mtcars_partial.schema.json  mtcars_partial_bound-string.schema.json  mtcars_partial_bound-types.schema.json  mtcars_partial_enum-fields.schema.json  mtcars_partial_enum-threshold.schema.json  mtcars_partial_explicit-nulls.schema.json
